--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 # dc: Data Carpentry
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
-carpentry: "swc"
+carpentry: ""
 
 # Overall title for pages.
-title: "Lesson Title"
+title: "Data Analysis for the Life Sciences"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
