remove old markdowns and update config with new title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: ""
 
 # Overall title for pages.
-title: "Data Analysis for the Life Sciences"
+title: "Statistical Inference for Biology"
 
 # Life cycle stage of the lesson
 # possible values: "pre-alpha", "alpha", "beta", "stable"
