--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ life_cycle: 'beta'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/carpentries-incubator/statistical-inference-for-biology`
+source: 'https://github.com/carpentries-incubator/statistical-inference-for-biology'
 
 # Default branch of your lesson
 branch: 'main'
